// Vitest Snapshot v1

exports[`Layout > Layout asideVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <t-layout>
    <t-aside>
      <t-menu
        height="550px"
        style="margin-right: 50px;"
        theme="light"
        value="dashboard"
      >
        <img
          alt="logo"
          class="t-menu__logo--center"
          slot="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        <t-menu-item
          value="dashboard"
        >
          <svg
            class="t-icon t-icon-dashboard"
            slot="icon"
          >
            <use
              href="#t-icon-dashboard"
            />
          </svg>
          仪表盘 
        </t-menu-item>
        <t-menu-item
          value="resource"
        >
          <svg
            class="t-icon t-icon-server"
            slot="icon"
          >
            <use
              href="#t-icon-server"
            />
          </svg>
          资源列表 
        </t-menu-item>
        <t-menu-item
          value="root"
        >
          <svg
            class="t-icon t-icon-root-list"
            slot="icon"
          >
            <use
              href="#t-icon-root-list"
            />
          </svg>
          根目录 
        </t-menu-item>
        <t-menu-item
          value="control-platform"
        >
          <svg
            class="t-icon t-icon-control-platform"
            slot="icon"
          >
            <use
              href="#t-icon-control-platform"
            />
          </svg>
          调度平台 
        </t-menu-item>
        <t-menu-item
          value="precise-monitor"
        >
          <svg
            class="t-icon t-icon-precise-monitor"
            slot="icon"
          >
            <use
              href="#t-icon-precise-monitor"
            />
          </svg>
          精准监控 
        </t-menu-item>
        <t-menu-item
          value="mail"
        >
          <svg
            class="t-icon t-icon-mail"
            slot="icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
          消息区 
        </t-menu-item>
        <t-menu-item
          value="user-circle"
        >
          <svg
            class="t-icon t-icon-user-circle"
            slot="icon"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          个人中心 
        </t-menu-item>
        <t-menu-item
          value="play-circle"
        >
          <svg
            class="t-icon t-icon-play-circle"
            slot="icon"
          >
            <use
              href="#t-icon-play-circle"
            />
          </svg>
          视频区 
        </t-menu-item>
        <t-menu-item
          value="edit1"
        >
          <svg
            class="t-icon t-icon-edit-1"
            slot="icon"
          >
            <use
              href="#t-icon-edit-1"
            />
          </svg>
          资源编辑 
        </t-menu-item>
      </t-menu>
    </t-aside>
    <t-layout>
      <t-content>
        <div>
          Content
        </div>
      </t-content>
      <t-footer>
        Copyright @ 2019-2022 Tencent. All Rights Reserved
      </t-footer>
    </t-layout>
  </t-layout>
</div>
`;

exports[`Layout > Layout baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div>
    <t-layout>
      <t-header>
        Header
      </t-header>
      <t-content>
        Content
      </t-content>
      <t-footer>
        Footer
      </t-footer>
    </t-layout>
  </div>
  <div>
    <t-layout>
      <t-header>
        Header
      </t-header>
      <t-layout>
        <t-aside>
          Aside
        </t-aside>
        <t-content>
          Content
        </t-content>
      </t-layout>
      <t-footer>
        Footer
      </t-footer>
    </t-layout>
  </div>
  <div>
    <t-layout>
      <t-header>
        Header
      </t-header>
      <t-layout>
        <t-content>
          Content
        </t-content>
        <t-aside>
          Aside
        </t-aside>
      </t-layout>
      <t-footer>
        Footer
      </t-footer>
    </t-layout>
  </div>
  <div>
    <t-layout>
      <t-aside>
        Aside
      </t-aside>
      <t-layout>
        <t-header>
          Header
        </t-header>
        <t-content>
          Content
        </t-content>
        <t-footer>
          Footer
        </t-footer>
      </t-layout>
    </t-layout>
  </div>
</t-space>
`;

exports[`Layout > Layout combineVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <t-layout>
    <t-header>
      <t-head-menu
        height="120px"
        value="item1"
      >
        <img
          alt="logo"
          class="logo"
          slot="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        <t-menu-item
          value="item1"
        >
          已选内容
        </t-menu-item>
        <t-menu-item
          value="item2"
        >
          菜单内容一
        </t-menu-item>
        <t-menu-item
          value="item3"
        >
          菜单内容二
        </t-menu-item>
        <t-menu-item
          disabled="true"
          value="item4"
        >
          菜单内容三
        </t-menu-item>
      </t-head-menu>
    </t-header>
    <t-layout>
      <t-aside>
        <t-menu
          height="550px"
          style="margin-right: 50px;"
          theme="light"
          value="dashboard"
        >
          <t-menu-item
            value="dashboard"
          >
            <svg
              class="t-icon t-icon-dashboard"
              slot="icon"
            >
              <use
                href="#t-icon-dashboard"
              />
            </svg>
            仪表盘 
          </t-menu-item>
          <t-menu-item
            value="resource"
          >
            <svg
              class="t-icon t-icon-server"
              slot="icon"
            >
              <use
                href="#t-icon-server"
              />
            </svg>
            资源列表 
          </t-menu-item>
          <t-menu-item
            value="root"
          >
            <svg
              class="t-icon t-icon-root-list"
              slot="icon"
            >
              <use
                href="#t-icon-root-list"
              />
            </svg>
            根目录 
          </t-menu-item>
          <t-menu-item
            value="control-platform"
          >
            <svg
              class="t-icon t-icon-control-platform"
              slot="icon"
            >
              <use
                href="#t-icon-control-platform"
              />
            </svg>
            调度平台 
          </t-menu-item>
          <t-menu-item
            value="precise-monitor"
          >
            <svg
              class="t-icon t-icon-precise-monitor"
              slot="icon"
            >
              <use
                href="#t-icon-precise-monitor"
              />
            </svg>
            精准监控 
          </t-menu-item>
          <t-menu-item
            value="mail"
          >
            <svg
              class="t-icon t-icon-mail"
              slot="icon"
            >
              <use
                href="#t-icon-mail"
              />
            </svg>
            消息区 
          </t-menu-item>
          <t-menu-item
            value="user-circle"
          >
            <svg
              class="t-icon t-icon-user-circle"
              slot="icon"
            >
              <use
                href="#t-icon-user-circle"
              />
            </svg>
            个人中心 
          </t-menu-item>
          <t-menu-item
            value="play-circle"
          >
            <svg
              class="t-icon t-icon-play-circle"
              slot="icon"
            >
              <use
                href="#t-icon-play-circle"
              />
            </svg>
            视频区 
          </t-menu-item>
          <t-menu-item
            value="edit1"
          >
            <svg
              class="t-icon t-icon-edit-1"
              slot="icon"
            >
              <use
                href="#t-icon-edit-1"
              />
            </svg>
            资源编辑 
          </t-menu-item>
        </t-menu>
      </t-aside>
      <t-layout>
        <t-content>
          <div>
            Content
          </div>
        </t-content>
        <t-footer>
          Copyright @ 2019-2022 Tencent. All Rights Reserved
        </t-footer>
      </t-layout>
    </t-layout>
  </t-layout>
</div>
`;

exports[`Layout > Layout topVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <t-layout>
    <t-header>
      <t-head-menu
        height="120px"
        theme="light"
        value="item1"
      >
        <img
          alt="logo"
          class="logo"
          slot="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        <t-menu-item
          value="item1"
        >
          已选内容
        </t-menu-item>
        <t-menu-item
          value="item2"
        >
          菜单内容一
        </t-menu-item>
        <t-menu-item
          value="item3"
        >
          菜单内容二
        </t-menu-item>
        <t-menu-item
          disabled="true"
          value="item4"
        >
          菜单内容三
        </t-menu-item>
      </t-head-menu>
    </t-header>
    <t-content>
      <div>
        Content
      </div>
    </t-content>
    <t-footer>
       Copyright @ 2019-2022 Tencent. All Rights Reserved 
    </t-footer>
  </t-layout>
</div>
`;
